Fix background stretch problem

--- a/src/components/skillpage/skillpage.css
+++ b/src/components/skillpage/skillpage.css
@@ -1,7 +1,7 @@
 .skillspage {
   background-image: url(../../Skills.png);
   width: 100%;
-  height: 120vh;
+  max-height: 100000px;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top;
